--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- jQuery -->
-	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
+	<!-- <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
 			integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-			crossorigin="anonymous"></script>
+			crossorigin="anonymous"></script> -->
 
 	<!-- Bootstrap compiled and minified CSS -->
 	<!-- <link rel="stylesheet"
